# hack_vm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run-tests
projects/07/: vm.py
projects/07/MyTest/: AndTest.vm  Gt_LtTest.vm  NegTest.vm  NotTest.vm  OrTest.vm  SubTest.vm
projects/07/vm_translator/: main.cpp  vm.py
src/: command_type.hpp  main.cpp  parser.cpp  parser.hpp  writer.cpp  writer.hpp
